force-app/main/default/objects/Plano_Comercial__c/Plano_Comercial__c.object-meta.xml
<CustomObject>
    <label>Plano Comercial</label>
    <nameField>
        <label>Plano Comercial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planos Comerciais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>