force-app/main/default/objects/Plano_Comercial__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Plano disponível para venda</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>