force-app/main/default/objects/Plano_Comercial__c/fields/Cobertura_Academias__c.field-meta.xml
<CustomField>
    <fullName>Cobertura_Academias__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inclui academias físicas</description>
    <label>Cobertura das Academias</label>
    <type>Checkbox</type>
</CustomField>