force-app/main/default/objects/Plano_Comercial__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Nome comercial do plano</description>
    <label>Nome</label>
    <length>200</length>
    <type>Text</type>
</CustomField>