force-app/main/default/objects/Plano_Comercial__c/fields/Tipo_Plano__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Plano__c</fullName>
    <label>Tipo de Plano</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>