force-app/main/default/objects/Plano_Comercial__c/fields/Valor_Por_Vida__c.field-meta.xml
<CustomField>
    <fullName>Valor_Por_Vida__c</fullName>
    <description>Custo mensal por colaborador</description>
    <label>Valor por vida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>