force-app/main/default/objects/Plano_Comercial__c/validationRules/Valor_Por_Vida_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor_Por_Vida_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  ISBLANK(Valor_Por_Vida__c),
  Valor_Por_Vida__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Valor_Por_Vida__c</errorDisplayField>
    <errorMessage>O valor por vida deve ser maior que zero.</errorMessage>
</ValidationRule>